adding poster links

--- a/index.html
+++ b/index.html
@@ -118,8 +118,11 @@
                 <em>British Machine Vision Conference (<a href="https://bmvc2023.org/">BMVC</a>)</em>, 2023
                 <br>
                 <a href="https://silky1708.github.io/LOCATE/">project page</a> /
+                <a href="https://papers.bmvc2023.org/0295.pdf">paper</a> /
                 <a href="https://arxiv.org/abs/2308.11239">arXiv</a> /
-                <a href="https://github.com/silky1708/LOCATE">code</a>
+                <a href="https://github.com/silky1708/LOCATE">code</a> /
+                <a href="https://drive.google.com/file/d/1bs6PVz2aLMY0IJUqVuIjeOdG0cX3cE3H/view">poster</a>
+
                 <p></p>
                 <p>Self-supervised framework for object segmentation in both videos and images.</p>
               </td>
@@ -149,7 +152,8 @@
                 <em>CVPR workshop on Learning with Limited Labelled Data (<a href="https://sites.google.com/view/l3d-ivu-2023">L3D-IVU</a>)</em>, 2023
                 <br>
                 <a href="https://arxiv.org/abs/2307.04392">arXiv</a> /
-                <a href="https://github.com/IssamLaradji/l3divu/blob/main/l3divu_2023/accepted_no_archive/46.pdf">paper</a>
+                <a href="https://github.com/IssamLaradji/l3divu/blob/main/l3divu_2023/accepted_no_archive/46.pdf">paper</a> /
+                <a href="https://drive.google.com/file/d/18_ApZAIrgLA91kEVN_9pPmkQQLpqT4N9/view">poster</a>
                 <!-- <a href="https://github.com/silky1708/LOCATE">code</a> -->
                 <p></p>
                 <p>Video Object Segmentation (VOS) by leveraging flow-guided graph cut and temporal consistency in videos.</p>
