--- a/index.html
+++ b/index.html
@@ -9,12 +9,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Amiri&display=swap" rel="stylesheet">
     <!-- font awesome icons -->
     <script src="https://kit.fontawesome.com/e86757dabd.js" crossorigin="anonymous"></script>
     <!-- <link rel="icon" type="image/svg" href="images/silky.svg" sizes="48x48"> -->
     <!-- <img src="images/silky.svg"> -->
     <!-- <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌐</text></svg>"> -->
     <style>
+      body {
+        font-family: 'Amiri', serif;
+      }
+      
       a:link {
         color: #9b111e;
         background-color: transparent;
