--- a/misc.html
+++ b/misc.html
@@ -15,6 +15,10 @@
     <!-- <img src="images/silky.svg"> -->
     <!-- <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌐</text></svg>"> -->
     <style>
+      body {
+        font-family: 'Amiri', serif;
+      }
+      
       a:link {
         color: #9b111e;
         background-color: transparent;
