patents; font; book

--- a/index.html
+++ b/index.html
@@ -9,19 +9,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Amiri&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Amiri&display=swap" rel="stylesheet"> -->
     <!-- font awesome icons -->
     <script src="https://kit.fontawesome.com/e86757dabd.js" crossorigin="anonymous"></script>
     <!-- <link rel="icon" type="image/svg" href="images/silky.svg" sizes="48x48"> -->
     <!-- <img src="images/silky.svg"> -->
     <!-- <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌐</text></svg>"> -->
     <style>
-      body {
-        font-family: 'Amiri', serif;
-      }
-
       a:link {
         color: #9b111e;
         background-color: transparent;
@@ -170,15 +166,21 @@
           </tbody></table> 
 
 
-          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:collapse;margin-right:auto;margin-left:auto; cellpadding:10px;"><tbody>
-
+          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+            <tr>
+            <td style="padding:20px;width:100%;vertical-align:middle">
+              <h2>Patents</h2>
+            </td>
+          </tr>
+        </tbody></table>
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:collapse;margin-right:auto;margin-left:auto; cellpadding:10px;"><tbody>
             <tr id="patents" style="">
               <td style="padding-left:20px;padding-right: 20px; width:100%;vertical-align:middle;">
               <table style="width: 100%;"> <tbody><tr>
                 <td class="underline" style="width: 80%;padding-bottom: 8px; padding-top: 8px;">
                 <papertitle>Generating image object segmentations utilizing graph-cut partitioning in self-supervised object discovery</papertitle>
                 <br>
-                <strong>Silky Singh</strong>, 
+                <strong><u>Silky Singh</u></strong>, 
                 Shripad Deshmukh,
                 Mausoom Sarkar,
                 Balaji Krishnamurthy
@@ -195,7 +197,7 @@
                 <td class="underline" style="width: 80%;padding-bottom: 8px; padding-top: 8px;">
                 <papertitle>Video Object Segmentation using estimated motion information and image features</papertitle>
                 <br>
-                <strong>Silky Singh</strong>, 
+                <strong><u>Silky Singh</u></strong>, 
                 Shripad Deshmukh,
                 Mausoom Sarkar,
                 Rishabh Jain,
@@ -214,7 +216,7 @@
                 <td class="underline" style="width: 80%;padding-bottom: 8px; padding-top: 8px;">
                 <papertitle>Personalized form error correction propagation</papertitle>
                 <br>
-                <strong>Silky Singh</strong>, 
+                <strong><u>Silky Singh</u></strong>, 
                 Shripad Deshmukh,
                 Surgan Jandial,
                 Abhinav Java,
