--- a/index.html
+++ b/index.html
@@ -54,19 +54,24 @@
                 <p class="name" style="text-align: center;">
                 Silky Singh
                 </p>
-                <p>I am a Machine Learning Research Associate at Media and Data Science Research (MDSR) Lab, Adobe. 
-                  I am broadly interested in computer vision and machine learning. During my time here, I have explored
-                  image editing, self-supervised learning, image segmentation and text-conditioned style transfer.
+                <p>I am a <strong>Machine Learning Research Associate</strong> at MDSR Lab, Adobe. During
+                   my time here, I have explored image editing, self-supervised learning, image segmentation 
+                   and text-conditioned style transfer, developing a broad interest in computer vision and
+                    machine learning.
                 </p>
                 <p>
-                  In 2022, I graduated from <a href="https://home.iitd.ac.in/">IIT Delhi</a> with a Bachelor's in Mathematics and Computing. My 
-                  thesis project on "Deep Neural Network approximation for image denoising" was advised by
-                   <a href="https://web.iitd.ac.in/~siva/">Prof. Sivananthan Sampath</a>.
-                  During the summer of 2021, I spent a wonderful time at <a href="https://research.adobe.com/">
-                    Adobe Research</a> working with <a href="https://kuldeepkulkarni.github.io/">Dr. Kuldeep Kulkarni</a>
-                  on context-aware object insertion in images. Previously, I also had an amazing time at 
-                  <a href="https://www.mpi-sws.org/research-areas/programming-languages-and-verification/">MPI-SWS</a> working on
-                  program synthesis with <a href="https://malyzajko.github.io/">Prof. Eva Darulova</a>.
+                  In 2022, I graduated from <a href="https://home.iitd.ac.in/"><strong>IIT Delhi</strong></a> with a Bachelor's degree in Mathematics 
+                  and Computing. My thesis project on "Deep Neural Network approximation for image denoising" was advised by
+                   <a href="https://web.iitd.ac.in/~siva/"><strong>Prof. Sivananthan Sampath</strong></a>. During my undergrad,
+                   I spent wonderful time at <a href="https://research.adobe.com/">
+                    <strong>Adobe Research</strong></a> working with <a href="https://kuldeepkulkarni.github.io/"><strong>Dr. Kuldeep Kulkarni</strong></a>
+                  on context-aware object insertion in images, and 
+                  <a href="https://www.mpi-sws.org/research-areas/programming-languages-and-verification/"><strong>MPI-SWS</strong></a> working on
+                  program synthesis with <a href="https://malyzajko.github.io/"><strong>Prof. Eva Darulova</strong></a>.
+
+
+                  <!-- During the summer of 2021, I spent a wonderful time at  Previously, I also had an amazing time at  -->
+                  
 
                 </p>
                 <p style="text-align:center">
