--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
                 <p class="name" style="text-align: center;">
                 Silky Singh
                 </p>
-                <p>I am a <strong>Machine Learning Research Associate</strong> at MDSR Lab, Adobe. During
-                   my time here, I have explored image editing, self-supervised learning, image segmentation 
-                   and text-conditioned style transfer, developing a broad interest in computer vision and
-                    machine learning.
+                <p>I am a <strong>Machine Learning Research Associate</strong> at MDSR Lab, Adobe. I have explored
+                   <em>image editing, self-supervised learning, image segmentation 
+                   and text-conditioned style transfer</em>, developing a broad interest in <strong>Computer Vision</strong> and
+                    <strong>Machine Learning</strong>.
                 </p>
                 <p>
                   In 2022, I graduated from <a href="https://home.iitd.ac.in/"><strong>IIT Delhi</strong></a> with a Bachelor's degree in Mathematics 
