--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
                     <strong>Machine Learning</strong>.
                 </p>
                 <p>
-                  In 2022, I graduated from <a href="https://home.iitd.ac.in/"><strong><em>IIT Delhi</em></strong></a> with a Bachelor's degree in Mathematics 
+                  In 2022, I graduated from <a href="https://home.iitd.ac.in/"><strong>IIT Delhi</strong></a> with a Bachelor's degree in Mathematics 
                   and Computing. My thesis project on <em>"Deep Neural Network approximation for image denoising"</em> was advised by
-                   <a href="https://web.iitd.ac.in/~siva/"><strong><em>Prof. Sivananthan Sampath</em></strong></a>. During my undergrad,
+                   <a href="https://web.iitd.ac.in/~siva/"><strong>Prof. Sivananthan Sampath</strong></a>. During my undergrad,
                    I spent wonderful time at <a href="https://research.adobe.com/">
-                    <strong><em>Adobe Research</em></strong></a> working with <a href="https://kuldeepkulkarni.github.io/"><strong><em>Dr. Kuldeep Kulkarni</em></strong></a>
+                    <strong>Adobe Research</strong></a> working with <a href="https://kuldeepkulkarni.github.io/"><strong>Dr. Kuldeep Kulkarni</strong></a>
                   on context-aware object insertion in images, and 
-                  <a href="https://www.mpi-sws.org/research-areas/programming-languages-and-verification/"><strong><em>MPI-SWS</em></strong></a> working on
-                  program synthesis with <a href="https://malyzajko.github.io/"><strong><em>Prof. Eva Darulova</em></strong></a>.
+                  <a href="https://www.mpi-sws.org/research-areas/programming-languages-and-verification/"><strong>MPI-SWS</strong></a> working on
+                  program synthesis with <a href="https://malyzajko.github.io/"><strong>Prof. Eva Darulova</strong></a>.
 
 
                   <!-- During the summer of 2021, I spent a wonderful time at  Previously, I also had an amazing time at  -->
