add preprint; fix minor issues

--- a/misc.html
+++ b/misc.html
@@ -123,10 +123,10 @@
                 <li><img src="images/bookmark-solid-sm-orange.svg">&nbsp;So Good They Can't Ignore You <em>by Cal Newport</em></li>
                 <li><img src="images/bookmark-solid-sm-red.svg">&nbsp;Men without Women <em>by Haruki Murakami</em></li>
                 <li><img src="images/bookmark-solid-sm-red.svg">&nbsp;The Great Gatsby <em>by F. Scott Fitzgerald</em></li>
-                <li><img src="images/bookmark-solid-sm-orange.svg">&nbsp;Ikigai <em>by Yukari Mitsuhashi</em></li>
+                <li><img src="images/bookmark-solid-sm-orange.svg">&nbsp;Ikigai <em>by Hector Garcia and Francesc Miralles</em></li>
                 <li><img src="images/bookmark-solid-sm-violet.svg">&nbsp;Crime and Punishment <em>by Fyodor Dostoyevsky</em></li>
                 <li><img src="images/bookmark-solid-sm-red.svg">&nbsp;the picture of Dorian Gray <em>by Oscar Wilde</em></li>
-                <li><img src="images/bookmark-solid-sm-orange.svg">&nbsp;Outliers <em>by Malcom Gladwell</em></li>
+                <li><img src="images/bookmark-solid-sm-orange.svg">&nbsp;Outliers <em>by Malcolm Gladwell</em></li>
                 <li><img src="images/bookmark-solid-sm-orange.svg">&nbsp;The Compound Effect <em>by Darren Hardy</em></li>
                 <li><img src="images/bookmark-solid-sm-orange.svg">&nbsp;Seven brief lessons on Physics <em>by Carlo Rovelli</em></li>
                 <li><img src="images/bookmark-solid-sm-orange.svg">&nbsp;How to Fail at Almost Everything and Still Win Big <em>by Scott Adams</em></li>
