--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                    <a href="https://web.iitd.ac.in/~siva/"><strong>Prof. Sivananthan Sampath</strong></a>. During my undergrad,
                    I spent wonderful time at <a href="https://research.adobe.com/">
                     <strong>Adobe Research</strong></a> working with <a href="https://kuldeepkulkarni.github.io/"><strong>Dr. Kuldeep Kulkarni</strong></a>
-                  on context-aware object insertion in images, and 
-                  <a href="https://www.mpi-sws.org/research-areas/programming-languages-and-verification/"><strong>MPI-SWS</strong></a> working on
+                  on context-aware object insertion in images, and at 
+                  <a href="https://www.mpi-sws.org/research-areas/programming-languages-and-verification/"><strong>Max Planck Institute</strong></a> working on
                   program synthesis with <a href="https://malyzajko.github.io/"><strong>Prof. Eva Darulova</strong></a>.
 
 
