--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
                 <p class="name" style="text-align: center;">
                 Silky Singh
                 </p>
-                <p>I am a <strong>Machine Learning Research Associate</strong> at MDSR Lab, Adobe. I have explored
-                   <em>image editing, self-supervised learning, image segmentation 
-                   and text-conditioned style transfer</em>, developing a broad interest in <strong>Computer Vision</strong> and
+                <p>I am an incoming Master's in CS student at Stanford. Previously, I worked at MDSR Lab, Adobe as a <strong>Research Associate</strong>. 
+                  During the ~2 years, I explored <em>generative models (diffusion models), image editing, self-supervised learning, image and video segmentation, 
+                   and style transfer</em>, developing a broad interest in <strong>Computer Vision</strong> and
                     <strong>Machine Learning</strong>.
                 </p>
                 <p>
-                  In 2022, I graduated from <a href="https://home.iitd.ac.in/"><strong>IIT Delhi</strong></a> with a Bachelor's degree in Mathematics 
+                  Even before that, I graduated from <a href="https://home.iitd.ac.in/"><strong>IIT Delhi</strong></a> with a Bachelor's degree in Mathematics 
                   and Computing. My thesis project on <em>"Deep Neural Network approximation for image denoising"</em> was advised by
                    <a href="https://web.iitd.ac.in/~siva/"><strong>Prof. Sivananthan Sampath</strong></a>. During my undergrad,
                    I spent wonderful time at <a href="https://research.adobe.com/">
@@ -69,13 +69,16 @@
                   <a href="https://www.mpi-sws.org/research-areas/programming-languages-and-verification/"><strong>Max Planck Institute</strong></a> working on
                   program synthesis with <a href="https://malyzajko.github.io/"><strong>Prof. Eva Darulova</strong></a>.
 
+                  <br/><br/>
+                  email: silky1708 AT gmail DOT com
+
 
                   <!-- During the summer of 2021, I spent a wonderful time at  Previously, I also had an amazing time at  -->
                   
 
                 </p>
                 <p style="text-align:center">
-                  <a href="mailto:silky1708@gmail.com">Email</a> &nbsp;/&nbsp;
+                  <!-- <a href="mailto:silky1708@gmail.com">Email</a> &nbsp;/&nbsp; -->
                   <!-- <a href="data/JonBarron-CV.pdf">CV</a> &nbsp;/&nbsp; -->
                   <!-- <a href="data/JonBarron-bio.txt">Bio</a> &nbsp;/&nbsp; -->
                   <a href="https://scholar.google.com/citations?user=xkv3k4QAAAAJ&hl=en">Google Scholar</a> &nbsp;/&nbsp;
@@ -87,6 +90,8 @@
               </td>
               <td style="padding:2.5%;width:30%;max-width:30%">
                 <a href="images/silky_circle.png"><img style="width:100%;max-width:100%" alt="profile photo" src="images/silky_circle.png" class="hoverZoomLink"></a>
+                <br/>
+                Shimla, India. <em>2022</em>
               </td>
             </tr>
           </tbody></table>
