--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               <td style="padding:2.5%;width:30%;max-width:30%">
                 <a href="images/silky_circle.png"><img style="width:100%;max-width:100%" alt="profile photo" src="images/silky_circle.png" class="hoverZoomLink"></a>
                 <br/>
-                Shimla, India. <em>2022</em>
+                <p style="text-align:center">Shimla, India. <em>2022</em></p>
               </td>
             </tr>
           </tbody></table>
