--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <p class="name" style="text-align: center;">
                 Silky Singh
                 </p>
-                <p>I am an incoming Master's in CS student at <a href="https://www.cs.stanford.edu/" text-decoration="underline"><strong>Stanford</strong></a>. Previously, I worked at MDSR Lab, <a href="https://www.adobe.com/"><strong>Adobe</strong></a> as a <strong>Research Associate</strong>. 
+                <p>I am an incoming Master's in CS student at <a href="https://www.cs.stanford.edu/" textDecoration="underline"><strong>Stanford</strong></a>. Previously, I worked at MDSR Lab, <a href="https://www.adobe.com/"><strong>Adobe</strong></a> as a <strong>Research Associate</strong>. 
                   During the ~2 years, I explored <em>generative models (diffusion models), image editing, self-supervised learning, image and video segmentation, 
                    and style transfer</em>, developing a broad interest in <strong>Computer Vision</strong> and
                     <strong>Machine Learning</strong>.
@@ -85,6 +85,7 @@
                   <!-- <a href="https://twitter.com/jon_barron">Twitter</a> &nbsp;/&nbsp; -->
                   <a href="https://github.com/silky1708">Github</a> &nbsp;/&nbsp;
                   <a href="https://www.linkedin.com/in/silky1708/">LinkedIn</a> &nbsp;/&nbsp;
+                  <a href="https://twitter.com/sisi1708">X</a> &nbsp;/&nbsp;
                   <a href="misc.html">Misc</a>
                 </p>
               </td>
