--- a/index.html
+++ b/index.html
@@ -71,11 +71,6 @@
 
                   <br/><br/>
                   email: silky1708 AT gmail DOT com, silsingh AT stanford DOT edu
-
-
-                  <!-- During the summer of 2021, I spent a wonderful time at  Previously, I also had an amazing time at  -->
-                  
-
                 </p>
                 <p style="text-align:center">
                   <!-- <a href="mailto:silky1708@gmail.com">Email</a> &nbsp;/&nbsp; -->
@@ -87,6 +82,10 @@
                   <a href="https://www.linkedin.com/in/silky1708/">LinkedIn</a> &nbsp;/&nbsp;
                   <a href="https://twitter.com/sisi1708">X</a> &nbsp;/&nbsp;
                   <a href="misc.html">Misc</a>
+                </p>
+                <p>
+                  <underline><strong>Update:</strong></underline> I am looking for Summer 2025 internships in Computer Vision/ML applied research roles.
+                  If you think I'd be a good fit, please don't hesitate to reach out!
                 </p>
               </td>
               <td style="padding:2.5%;width:30%;max-width:30%">
