--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                   <a href="misc.html">Misc</a>
                 </p>
                 <p>
-                  <underline><strong>Update:</strong></underline> I am looking for Summer 2025 internships in Computer Vision/ML applied research roles.
+                  <u><strong>Update:</strong></u> I am looking for Summer 2025 internships in Computer Vision/ML applied research roles.
                   If you think I'd be a good fit, please don't hesitate to reach out!
                 </p>
               </td>
