--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
           <!-- PATENTS -->
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
-            <td style="padding:20px;width:100%;vertical-align:middle">
+            <td style="padding:20px;width:100%;vertical-align:middle" class="underline">
               <h2>US Patents</h2>
             </td>
           </tr>
@@ -251,7 +251,7 @@
           <tr style="">
             <td style="padding-left:20px;padding-right: 20px; width:100%;vertical-align:middle;">
             <table style="width: 100%;"> <tbody><tr>
-              <td class="underline" style="width: 80%;padding-bottom: 8px; padding-top: 8px;">
+              <td style="width: 80%;padding-bottom: 8px; padding-top: 8px;">
               <papertitle>Mask-CLIPstyler: Localized text-based style transfer in images</papertitle>
               <br>
               <em>
@@ -274,7 +274,7 @@
           <tr id="patents" style="">
               <td style="padding-left:20px;padding-right: 20px; width:100%;vertical-align:middle;">
               <table style="width: 100%;"> <tbody><tr>
-                <td class="underline" style="width: 80%;padding-bottom: 8px; padding-top: 8px;">
+                <td style="width: 80%;padding-bottom: 8px; padding-top: 8px;">
                 <papertitle>Generating image object segmentations utilizing graph-cut partitioning in self-supervised object discovery</papertitle>
                 <br>
                 <em>
@@ -296,7 +296,7 @@
             <tr style="">
               <td style="padding-left:20px;padding-right: 20px; width:100%;vertical-align:middle;">
               <table style="width: 100%;"> <tbody><tr>
-                <td class="underline" style="width: 80%;padding-bottom: 8px; padding-top: 8px;">
+                <td style="width: 80%;padding-bottom: 8px; padding-top: 8px;">
                 <papertitle>Video Object Segmentation using estimated motion information and image features</papertitle>
                 <br>
                 <em>
@@ -321,7 +321,7 @@
             <tr style="">
               <td style="padding-left:20px;padding-right: 20px; width:100%;vertical-align:middle;">
               <table style="width: 100%;"> <tbody><tr>
-                <td class="underline" style="width: 80%;padding-bottom: 8px; padding-top: 8px;">
+                <td style="width: 80%;padding-bottom: 8px; padding-top: 8px;">
                 <papertitle>Personalized form error correction propagation</papertitle>
                 <br>
                 <em>
@@ -367,16 +367,17 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
           <td style="padding:20px;width:100%;vertical-align:middle">
-            <h2>Teaching & Mentorship</h2>
+            <h2>Academic Service</h2>
           </td>
         </tr>
       </tbody></table>
       <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
             <ul>
-              <li>Teaching Assistant, Linear Algebra and Applications (<em>Spring 2022, IIT Delhi</em>) </li>
-              <li>Teaching Assistant, Introduction to Computer Science (<em>Fall 2021, IIT Delhi</em>)</li>
-              <li>Institute Academic Mentor, Board for Student Welfare (<em>Fall 2019, IIT Delhi</em>)</li>
+              <li><u>Reviewer/Subreviewer:</u>  </li>
+              <li><u>Teaching Assistant</u>, Linear Algebra and Applications (<em>Spring 2022, IIT Delhi</em>) </li>
+              <li><u>Teaching Assistant</u>, Introduction to Computer Science (<em>Fall 2021, IIT Delhi</em>)</li>
+              <li>Institute <u>Academic Mentor</u>, Board for Student Welfare (<em>Fall 2019, IIT Delhi</em>)</li>
             </ul>
           </tr>
       </tbody></table>
