--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                   <!-- <a href="mailto:silky1708@gmail.com">Email</a> &nbsp;/&nbsp; -->
                   <!-- <a href="data/JonBarron-CV.pdf">CV</a> &nbsp;/&nbsp; -->
                   <!-- <a href="data/JonBarron-bio.txt">Bio</a> &nbsp;/&nbsp; -->
-                  <a href="https://scholar.google.com/citations?user=xkv3k4QAAAAJ&hl=en">Google Scholar</a> &nbsp;/&nbsp;
+                  <a href="https://scholar.google.com/citations?hl=en&user=xkv3k4QAAAAJ&view_op=list_works&sortby=pubdate">Google Scholar</a> &nbsp;/&nbsp;
                   <!-- <a href="https://twitter.com/jon_barron">Twitter</a> &nbsp;/&nbsp; -->
                   <a href="https://github.com/silky1708">Github</a> &nbsp;/&nbsp;
                   <a href="https://www.linkedin.com/in/silky1708/">LinkedIn</a> &nbsp;/&nbsp;
