--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 </p>
                 <p>I am an incoming Master's in CS student at <a href="https://www.cs.stanford.edu/"><strong>Stanford</strong></a>. Previously, I worked at MDSR Lab, <a href="https://www.adobe.com/"><strong>Adobe</strong></a> as a <strong>Research Associate</strong>. 
                   During the ~2 years, I explored <em>generative models (diffusion models), image editing, self-supervised learning, image and video segmentation, 
-                   and style transfer</em>, developing a broad interest in <strong>Computer Vision</strong> and
+                   and style transfer</em> developing a broad interest in <strong>Computer Vision</strong> and
                     <strong>Machine Learning</strong>.
                 </p>
                 <p>
@@ -76,6 +76,7 @@
                   <!-- <a href="mailto:silky1708@gmail.com">Email</a> &nbsp;/&nbsp; -->
                   <!-- <a href="data/JonBarron-CV.pdf">CV</a> &nbsp;/&nbsp; -->
                   <!-- <a href="data/JonBarron-bio.txt">Bio</a> &nbsp;/&nbsp; -->
+                  <a href="">CV</a> &nbsp;/&nbsp;
                   <a href="https://scholar.google.com/citations?hl=en&user=xkv3k4QAAAAJ&view_op=list_works&sortby=pubdate">Google Scholar</a> &nbsp;/&nbsp;
                   <!-- <a href="https://twitter.com/jon_barron">Twitter</a> &nbsp;/&nbsp; -->
                   <a href="https://github.com/silky1708">Github</a> &nbsp;/&nbsp;
@@ -419,10 +420,10 @@
       <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
             <ul>
-              <li><u>Reviewer/Subreviewer</u>: CVPRW 2024 (L3D-IVU, AI4CC), CVPR 2024 </li>
-              <li><u>Teaching Assistant</u>, Linear Algebra and Applications (<em>Spring 2022, IIT Delhi</em>) </li>
-              <li><u>Teaching Assistant</u>, Introduction to Computer Science (<em>Fall 2021, IIT Delhi</em>)</li>
-              <li>Institute <u>Academic Mentor</u>, Board for Student Welfare (<em>Fall 2019, IIT Delhi</em>)</li>
+              <li><u><strong>Reviewer/Subreviewer</strong></u>: CVPRW 2024 (L3D-IVU, AI4CC), CVPR 2024 </li>
+              <li><u><strong>Teaching Assistant</strong></u>, Linear Algebra and Applications (<em>Spring 2022, IIT Delhi</em>) </li>
+              <li><u><strong>Teaching Assistant</strong></u>, Introduction to Computer Science (<em>Fall 2021, IIT Delhi</em>)</li>
+              <li>Institute <u><strong>Academic Mentor</strong></u>, Board for Student Welfare (<em>Fall 2019, IIT Delhi</em>)</li>
             </ul>
           </tr>
       </tbody></table>
