--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <tr> 
               <td style="padding:20px;width:25%;vertical-align:middle">
                 
-                  <img src='' width="160" height="160">
+                  <img src='images/teaser_least.jpg' width="160" height="160">
                 
               </td>
               <td style="padding:20px;width:75%;vertical-align:middle">
