grad apps resources

--- a/index.html
+++ b/index.html
@@ -422,6 +422,7 @@
               <li><strong>Teaching Assistant</strong>, Linear Algebra and Applications (<em>Spring 2022, IIT Delhi</em>) </li>
               <li><strong>Teaching Assistant</strong>, Introduction to Computer Science (<em>Fall 2021, IIT Delhi</em>)</li>
               <li>Institute <strong>Academic Mentor</strong>, Board for Student Welfare (<em>Fall 2019, IIT Delhi</em>)</li>
+              <li>Resources for grad applications: <a href="https://github.com/silky1708/grad-app-resources">Link</a></li>
             </ul>
           </tr>
       </tbody></table>
