--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
       <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
             <ul>
-              <li><strong>Reviewer/Subreviewer</strong>: WACV 2025, CVPRW 2024 (L3D-IVU, AI4CC), CVPR 2024 </li>
+              <li><strong>Reviewer/Sub-Reviewer</strong>: WACV 2025, CVPRW 2024 (L3D-IVU, AI4CC), CVPR 2024 </li>
               <li><strong>Teaching Assistant</strong>, Linear Algebra and Applications (<em>Spring 2022, IIT Delhi</em>) </li>
               <li><strong>Teaching Assistant</strong>, Introduction to Computer Science (<em>Fall 2021, IIT Delhi</em>)</li>
               <li>Institute <strong>Academic Mentor</strong>, Board for Student Welfare (<em>Fall 2019, IIT Delhi</em>)</li>
