--- a/index.html
+++ b/index.html
@@ -256,8 +256,8 @@
                 <!-- <br>
                 <em>British Machine Vision Conference (<a href="https://bmvc2023.org/">BMVC</a>)</em>, 2023
                 <br> -->
-                <em>Under Review</em>, 2024
-                <br>
+                <!-- <em>Under Review</em>, 2024 -->
+                <!-- <br> -->
                 <a href="data/stylrel.pdf">preprint</a>
                 <p></p>
                 <!-- <p>A relational loss for improved text-conditioned style transfer in images.</p> -->
@@ -288,7 +288,7 @@
             <td style="padding-left:20px;padding-right: 20px; width:100%;vertical-align:middle;">
             <table style="width: 100%;"> <tbody><tr>
               <td style="width: 80%;padding-bottom: 8px; padding-top: 8px;">
-              <papertitle>Mask-CLIPstyler: Localized text-based style transfer in images</papertitle>
+              <papertitle>Modifying digital images from text via multi-region localized style transfer</papertitle>
               <br>
               <em>
                 <strong><u>Silky Singh</u></strong>, 
