--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
                   <!-- <a href="https://twitter.com/sisi1708">X</a> &nbsp;/&nbsp; -->
                   <a href="misc.html">Misc</a>
                 </p>
-                <p>
+                <!-- <p>
                   <strong><u>Update</u>:</strong> I am seeking Summer 2025 internships in Computer Vision/ML applied research roles.
                   If you think I'd be a good fit, please don't hesitate to reach out!
-                </p>
+                </p> -->
               </td>
               <td style="padding:2.5%;width:30%;max-width:30%">
                 <a href="images/silky_circle.png"><img style="width:100%;max-width:100%" alt="profile photo" src="images/silky_circle.png" class="hoverZoomLink"></a>
@@ -298,7 +298,7 @@
               </em>
               
               <br>
-              <em>to be filed by Nov 2024</em>
+              <em>filed, Oct 2024</em>
               </td>
             </tr>  </tbody></table>
             </td>
