--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <body>
     <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
       <tr style="padding:0px">
-        <td style="padding:0px">
+        <td style="padding:0px;width:100%">
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr style="padding:0px">
               <td style="padding:2.5%;width:63%;vertical-align:middle">
@@ -89,11 +89,11 @@
                   If you think I'd be a good fit, please don't hesitate to reach out!
                 </p> -->
               </td>
-              <td style="padding:2.5%;width:30%;max-width:30%">
+              <!-- <td style="padding:2.5%;width:30%;max-width:30%">
                 <a href="images/silky_circle.png"><img style="width:100%;max-width:100%" alt="profile photo" src="images/silky_circle.png" class="hoverZoomLink"></a>
                 <br/>
                 <p style="text-align:center">Manali, India.</p>
-              </td>
+              </td> -->
             </tr>
           </tbody></table>
 
