--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
   <body>
     <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
       <tr style="padding:0px">
-        <td style="padding:0px;width:80%;text-align:center">
+        <td style="padding:0px">
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr style="padding:0px">
-              <td style="padding:2.5%;width:63%;vertical-align:middle">
-                <p class="name" style="text-align: center;">
+              <td style="padding:2.5%;width:80%;vertical-align:middle">
+                <p class="name" style="text-align: left;">
                 Silky Singh
                 </p>
                 <p>I am a Master's in CS student at <a href="https://www.cs.stanford.edu/"><strong>Stanford</strong></a>. Previously, I worked at MDSR Lab, <a href="https://www.adobe.com/"><strong>Adobe</strong></a> as a <strong>Research Associate</strong>. 
