--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         <td style="padding:0px">
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr style="padding:0px">
+              <td style="padding:2.5%;width:15%;max-width:15%"></td>
               <td style="padding:2.5%;width:80%;max-width:80%;vertical-align:middle">
                 <p class="name" style="text-align: left;">
                 Silky Singh
@@ -89,6 +90,7 @@
                   If you think I'd be a good fit, please don't hesitate to reach out!
                 </p> -->
               </td>
+              <td style="padding:2.5%;width:15%;max-width:15%"></td>
               <!-- <td style="padding:2.5%;width:30%;max-width:30%">
                 <a href="images/silky_circle.png"><img style="width:100%;max-width:100%" alt="profile photo" src="images/silky_circle.png" class="hoverZoomLink"></a>
                 <br/>
