--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <p class="name" style="text-align: left;">
                 Silky Singh
                 </p>
-                <p>I am a Master's in CS student at <a href="https://www.cs.stanford.edu/"><strong>Stanford</strong></a>. Previously, I worked at MDSR Lab, <a href="https://www.adobe.com/"><strong>Adobe</strong></a> as a <strong>Research Associate</strong>. 
+                <p>I am a Master's student at <a href="https://www.cs.stanford.edu/"><strong>Stanford</strong></a> studying CS. Previously, I worked at MDSR Lab, <a href="https://www.adobe.com/"><strong>Adobe</strong></a> as a <strong>Research Associate</strong>. 
                   During the ~2 years, I explored <em>generative models (diffusion models), image editing, self-supervised learning, image and video segmentation, 
                    and style transfer</em> developing a broad interest in <strong>Computer Vision</strong> and
                     <strong>Machine Learning</strong>.
